# Systemy-Czasu-Rzeczywistego

./: .gitignore
exercise_1/: CMakeLists.txt  main.c
project/: CMakeLists.txt  cli.c  cmakeinit.sh  instructions.md  logger.c  logger.h  main.c
zadanie1/: zad1.md
